@@ -107,9 +107,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <fork>true</fork>
+					<!--<release>${targetJdk.short}</release>-->
+                    <fork>false</fork>
                     <source>${targetJdk}</source>
                     <target>${targetJdk}</target>
                     <optimize>true</optimize>
@@ -123,11 +124,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>3.0.0-M3</version><!--$NO-MVN-MAN-VER$ -->
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <argLine>-Xms128m -Xmx128m</argLine>
-                </configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <forkMode>pertest</forkMode>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>--illegal-access=permit</argLine>
+					<forkCount>1</forkCount>
+					<reuseForks>true</reuseForks>
+				</configuration>
             </plugin>
         </plugins>
     </build>
