@@ -11,15 +11,18 @@
     <name>swing</name>
     <description>Java Swing components</description>
     <properties>
-        <targetJdk>1.8</targetJdk>
+        <targetJdk.short>8</targetJdk.short>
+        <targetJdk>1.${targetJdk.short}</targetJdk>
+        <maven.compiler.source>1.${targetJdk.short}</maven.compiler.source>
+        <maven.compiler.target>1.${targetJdk.short}</maven.compiler.target>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+        <forceRecheck>false</forceRecheck>
+        <scope.activation>provided</scope.activation>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <maven.site.skip>false</maven.site.skip>
         <maven.compiler.optimize>true</maven.compiler.optimize>
         <maven.compiler.fork>true</maven.compiler.fork>
-        <maven.compiler.source>${targetJdk}</maven.compiler.source>
-        <maven.compiler.target>${targetJdk}</maven.compiler.target>
         <maven.compiler.verbose>true</maven.compiler.verbose>
         <maven.compiler.debug>true</maven.compiler.debug>
         <maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
@@ -199,16 +202,18 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.5.1</version>
+                        <version>3.8.0</version>
                         <configuration>
-                            <fork>true</fork>
+        					<!--<release>${targetJdk.short}</release>-->
+                            <fork>false</fork>
                             <source>${targetJdk}</source>
                             <target>${targetJdk}</target>
                             <optimize>true</optimize>
                             <verbose>false</verbose>
                             <encoding>${project.build.sourceEncoding}</encoding>
-                            <debug>false</debug>
-                            <debuglevel>none</debuglevel>
+                            <debug>true</debug>
+                            <debuglevel>lines,vars,source</debuglevel>
+                            <compilerArgument>-parameters</compilerArgument>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -323,9 +328,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <fork>true</fork>
+					<!--<release>${targetJdk.short}</release>-->
+                    <fork>false</fork>
                     <source>${targetJdk}</source>
                     <target>${targetJdk}</target>
                     <optimize>true</optimize>
@@ -339,11 +345,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>3.0.0-M3</version><!--$NO-MVN-MAN-VER$ -->
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <argLine>-Xms128m -Xmx128m</argLine>
-                </configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <forkMode>pertest</forkMode>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>--illegal-access=permit</argLine>
+					<forkCount>1</forkCount>
+					<reuseForks>true</reuseForks>
+				</configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
